@@ -6,70 +6,74 @@ import com.ashcollege.repository.UserTopicLevelRepository;
 import com.ashcollege.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
 
 @RestController
 @RequestMapping("/api/user/topics-levels")
+@PreAuthorize("isAuthenticated()")
 public class UserTopicLevelController {
 
-    @Autowired
-    private UserService userService;
+    private final UserService userService;
+    private final UserTopicLevelRepository userTopicLevelRepo;
 
     @Autowired
-    private UserTopicLevelRepository userTopicLevelRepo;
+    public UserTopicLevelController(UserService userService,
+                                    UserTopicLevelRepository userTopicLevelRepo) {
+        this.userService = userService;
+        this.userTopicLevelRepo = userTopicLevelRepo;
+    }
 
-    // פונקציה שליפת תפקיד המשתמש
+    /**
+     * מחזיר את תפקיד המשתמש המחובר.
+     */
     @GetMapping("/role")
     public ResponseEntity<?> getUserRole() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-
+        var auth = org.springframework.security.core.context.SecurityContextHolder
+                .getContext().getAuthentication();
         if (auth == null || !auth.isAuthenticated()) {
-            return ResponseEntity.status(401).body("Not authenticated");
+            return ResponseEntity.status(401).body(Map.of("error", "Not authenticated"));
         }
 
         String email = auth.getName();
         UserEntity user = userService.findByMail(email);
-
         if (user == null) {
-            return ResponseEntity.status(404).body("User not found");
+            return ResponseEntity.status(404).body(Map.of("error", "User not found"));
         }
 
-        // מחזירים את התפקיד של המשתמש
-        return ResponseEntity.ok(Collections.singletonMap("role", user.getRole()));
+        return ResponseEntity.ok(Map.of("role", user.getRole()));
     }
 
     /**
-     * מחזיר את כל הנושאים + הרמה של המשתמש בכל נושא
+     * מחזיר את כל הנושאים + רמת המשתמש בכל נושא.
      */
     @GetMapping
     public ResponseEntity<?> getUserTopicsLevels() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        var auth = org.springframework.security.core.context.SecurityContextHolder
+                .getContext().getAuthentication();
         if (auth == null || !auth.isAuthenticated()) {
-            return ResponseEntity.status(401).body("Not authenticated");
+            return ResponseEntity.status(401).body(Map.of("error", "Not authenticated"));
         }
 
         UserEntity user = userService.getCurrentUser();
         if (user == null) {
-            return ResponseEntity.status(404).body("User not found");
+            return ResponseEntity.status(404).body(Map.of("error", "User not found"));
         }
 
         List<UserTopicLevelEntity> list = userTopicLevelRepo.findByUserId(user.getId());
-        // mapping בין topicId -> שם
-        Map<Integer, String> topicNames = new HashMap<>();
-        topicNames.put(1, "חיבור");
-        topicNames.put(2, "חיסור");
-        topicNames.put(3, "כפל");
-        topicNames.put(4, "חילוק");
-        topicNames.put(5, "חיבור שברים");
-        topicNames.put(6, "חיסור שברים");
-        topicNames.put(7, "כפל שברים");
-        topicNames.put(8, "חילוק שברים");
+        Map<Integer, String> topicNames = Map.of(
+                1, "חיבור",
+                2, "חיסור",
+                3, "כפל",
+                4, "חילוק",
+                5, "חיבור שברים",
+                6, "חיסור שברים",
+                7, "כפל שברים",
+                8, "חילוק שברים"
+        );
 
-        // בניית המערך לתשובה
         List<Map<String, Object>> responseTopics = new ArrayList<>();
         for (UserTopicLevelEntity ut : list) {
             Map<String, Object> item = new HashMap<>();
@@ -79,57 +83,51 @@ public class UserTopicLevelController {
             responseTopics.add(item);
         }
 
-        // החזרה בצורה אחידה
-        Map<String, Object> response = new HashMap<>();
-        response.put("success", true);
-        response.put("topics", responseTopics);
-
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(Map.of(
+                "success", true,
+                "topics", responseTopics
+        ));
     }
 
     /**
-     * עדכון רמה לנושא מסוים (לדוגמה הורדה מהרמה הנוכחית)
+     * מעדכן רמה לנושא מסוים. מקבל JSON עם { topicId, newLevel }.
      */
     @PutMapping
     public ResponseEntity<?> updateUserTopicLevel(@RequestBody Map<String, Integer> body) {
-        // body אמור להכיל: { topicId, newLevel }
+        var auth = org.springframework.security.core.context.SecurityContextHolder
+                .getContext().getAuthentication();
+        if (auth == null || !auth.isAuthenticated()) {
+            return ResponseEntity.status(401).body(Map.of("error", "Not authenticated"));
+        }
+
+        UserEntity user = userService.getCurrentUser();
+        if (user == null) {
+            return ResponseEntity.status(404).body(Map.of("error", "User not found"));
+        }
+
         int topicId = body.getOrDefault("topicId", 0);
         int newLevel = body.getOrDefault("newLevel", 1);
 
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        if (auth == null || !auth.isAuthenticated()) {
-            return ResponseEntity.status(401).body("Not authenticated");
-        }
-        UserEntity user = userService.getCurrentUser();
-        if (user == null) {
-            return ResponseEntity.status(404).body("User not found");
-        }
-
-        // איתור הרשומה הקיימת למשתמש, topicId
         UserTopicLevelEntity rec = userTopicLevelRepo.findByUserIdAndTopicId(user.getId(), topicId);
         if (rec == null) {
-            // ניצור אחת חדשה אם רוצים
-            // או נחזיר שגיאה שזה לא קיים
-            return ResponseEntity.badRequest().body("No level record found for this topic");
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "No level record found for this topic"));
         }
-
-        // לוודא שהמשתמש לא מנסה להגדיל מעל הקיים, אם זה ההיגיון שלך.
         if (newLevel > rec.getLevel()) {
-            return ResponseEntity.badRequest().body("אי אפשר להעלות רמה ידנית");
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "אי אפשר להעלות רמה ידנית"));
         }
-
-        // לוודא שלא יהיה פחות מ-1
         if (newLevel < 1) {
-            return ResponseEntity.badRequest().body("רמה לא תקינה");
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "רמה לא תקינה"));
         }
 
-        // עדכון
         rec.setLevel(newLevel);
         userTopicLevelRepo.save(rec);
 
-        Map<String, Object> response = new HashMap<>();
-        response.put("success", true);
-        response.put("message", "Level updated successfully");
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(Map.of(
+                "success", true,
+                "message", "Level updated successfully"
+        ));
     }
 }
